EKS/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loomi-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: loomi-api
  template:
    metadata:
      labels:
        app: loomi-api
    spec:
      containers:
      - name: loomi-api
        image: DOCKER_IMAGE
        ports:
        - containerPort: 8000
      imagePullSecrets:
        - name: ecr-registry-secret
