EKS/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loomi-api-service
spec:
  selector:
    app: loomi-api
  ports:
  - protocol: TCP
    port: 8000 
    targetPort: 8000 
  type: LoadBalancer
